# osureplay-parser

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.c
include/: decompressor.h  osu_replay_parser.h  osu_replay_parser.hpp
src/: osu_replay_parser.c  uncompress_lzma.c
